fix .friends-list.header overflow

--- a/resources/public/css/styles.css
+++ b/resources/public/css/styles.css
@@ -353,6 +353,7 @@ tr:nth-child(even) {
   gap: 12px;
   background-color: #ffffff0d;
   border-radius: 8px 8px 0 0;
+  overflow: hidden;
 }
 .friends-list.header .small-info-text {
   text-align: left;
